working on task 3, and added a dedicated picture folder

--- a/Semester_2/Datenbankensysteme/.gitignore
+++ b/Semester_2/Datenbankensysteme/.gitignore
@@ -1,2 +1,11 @@
-# Ignore the LaTex build folder
-Assignment\ 1/build/
+*.aux
+*.bbl
+*.bcf
+*.blg
+*.log
+*.out
+*.run.xml
+*.synctex.gz
+*.tex.bbl
+*.tex.blg
+*.dvi
